Curriculum actualizado al 1 de junio

--- a/CV.html
+++ b/CV.html
@@ -52,9 +52,9 @@
             <section class="section experiences-section">
                 <h2 class="section-title"><i class="fa fa-briefcase"></i> Experiencia Laboral</h2>
                 <h4 class="degree">Universidad de la Marina Mercante</h4>
-                <h5 class="meta">Julio 2019 - Diciembre 2019<br><br>Desarrollo de un sistema informático con GUI escrito en C# para
+                <h5 class="meta">Julio 2019 - Diciembre 2019<br><br>Desarrollo de un software de escritorio en C# para
                 realizar cálculos a partir de datos tomados del movimiento de un
-                péndulo.<br><br>Colaboración y trabajo en conjunto con equipos de trabajos de otras
+                péndulo.<br><br>Colaboración y trabajo en conjunto con equipos de trabajo de otras
                 áreas (electrónica y mecánica).</h5>
 
             </section><!--//section-->
@@ -106,12 +106,12 @@
                     <div class="item">
                         <h3 class="level-title">C, C#, Java, Javascript, Python, PHP.</h3><br>
                         <h3 class="level-title">Realicé un videojuego en Unity 2D.</h3><br>
-                        <h3 class="level-title">Conozco los siguientes frameworks/plataformas:
+                        <h3 class="level-title">Conozco los siguientes frameworks/herramientas:
                         <br><br>Node.js
-                        <br>Back-end: Express (Nodemon, Postman).
-                        <br>Front-end: Angular, React, Bootstrap.
+                        <br>Back-end: Express (Nodemon, Postman, Dotenv, etc).
+                        <br>Front-end: Angular, React, Bootstrap (Webpack, Babel).
                         <br>Bases de datos (SGBD): MySQL, MongoDB.
-                        <br>Unit test: Jest (con Node.js).</h3><br>
+                        <br>Unit test: Jest.</h3><br>
                         <h3 class="level-title">Conozco los conceptos: 
                         <br>API Rest, JSON, CRUD, código asíncrono y bloqueante, stacks de desarrollo, SCRUM, etc.</h3><br>
                         <h3 class="level-title">Uso GitHub para compartir proyectos y gestionar versiones. Mis repositorios están en: </h3><br>
